--- a/README.org
+++ b/README.org
@@ -384,7 +384,7 @@ DIST_MAN += $(addsuffix .1,$(DIST_BIN))
 $(DIST_MAN): %.1: %.pod
 	pod2man --center="title: does something" --name=THING --release="thing 0.1" --section=1 $< $@
 %.pod: %
-	make-pod-from-help.pl $< > $@
+	make-pod-from-help $< > $@
 	cat footer.pod >> $@
 EXTRA_CLEAN += $(DIST_MAN) $(patsubst %.1,%.pod,$(DIST_MAN))
 
